# message-db

./: .gitignore  .gitmodules  README.md  cabal.project  fourmolu.yaml  message-db.cabal  package.yaml  stack.yaml
.github/actions/cabal-build/: action.yaml
.github/actions/publish/: action.yaml
.github/actions/setup-system-dependencies/: action.yaml
.github/actions/stack-build/: action.yaml
.github/workflows/: ci.yaml  ci.yaml.disabled  message-db-cd.yaml  message-db-ci.yaml  message-db-cicd.yaml  message-db-monad-ci.yaml  message-db-monad-cicd.yaml  message-db-temp-cd.yaml  message-db-temp-ci.yaml  message-db-temp-cicd.yaml
examples/bank/: .envrc.sample  .gitignore  docker-compose.yaml
examples/bank/databases/: bank-databases.cabal  cabal.project
examples/bank/databases/app/: Main.hs
examples/bank/databases/src/Bank/: Databases.hs
examples/bank/databases/src/Bank/Databases/: MessageDb.hs  ReadDb.hs
examples/bank/databases/test/: Main.hs
examples/bank/shared/: bank-shared.cabal  cabal.project
examples/bank/shared/src/Bank/Shared/: Database.hs  EnvParsers.hs  Exception.hs  Logging.hs
examples/bank/shared/src/Bank/Shared/Database/: ConnectionUrl.hs  IdleConnectionTimeout.hs  MaxConnections.hs
examples/bank/shared/src/Bank/Shared/Exception/: Annotations.hs
examples/bank/shared/test/: Main.hs
examples/bank/shared/test/Bank/Shared/: DatabaseSpec.hs  EnvParsersSpec.hs
examples/bank/shared/test/Bank/Shared/Database/: ConnectionUrlSpec.hs  IdleConnectionTimeoutSpec.hs  MaxConnectionsSpec.hs
examples/bank/shared/test/Bank/Shared/Exception/: AnnotationsSpec.hs
examples/bank/shared/test/Spec/: PostgresTemp.hs  Utils.hs
message-db/: ChangeLog.md  README.md  message-db.cabal
message-db-monad/: LICENSE  message-db-monad.cabal
message-db-monad/src/MessageDb/: Monad.hs
message-db-monad/src/MessageDb/Functions/: Monad.hs
message-db-monad/src/MessageDb/Monad/: Functions.hs  Projection.hs  Subscription.hs
message-db-monad/src/MessageDb/Subscription/: Monad.hs
message-db-temp/: ChangeLog.md  README.md  message-db-temp.cabal
message-db-temp/src/MessageDb/: Temp.hs
message-db/src/: MessageDb.hs
message-db/src/MessageDb/: Consumer.hs  Correlation.hs  Functions.hs  Handlers.hs  Message.hs  Produce.hs  Producer.hs  Projection.hs  StreamName.hs  StreamVersion.hs  Subscription.hs
message-db/src/MessageDb/Consumer/: BatchSize.hs  Condition.hs  ConsumerGroup.hs  ConsumerGroupSize.hs  ConsumerIndex.hs  Correlation.hs  DeadLetterQueue.hs  Fetch.hs  HandlerError.hs  HandlerKey.hs  Projection.hs  ProjectionError.hs  ProjectionHandlers.hs  Snapshot.hs  Snapshots.hs  StreamVersion.hs  Subscription.hs  SubscriptionError.hs  SubscriptionErrorReason.hs  SubscriptionHandlers.hs  SubscriptionPosition.hs
message-db/src/MessageDb/Consumer/Projection/: Error.hs  Handlers.hs  Projected.hs
message-db/src/MessageDb/Consumer/Snapshot/: Message.hs
message-db/src/MessageDb/Consumer/Subscription/: ConsumerGroup.hs  ConsumerGroupSize.hs  ConsumerIndex.hs  Correlation.hs  Error.hs  ErrorReason.hs  Handlers.hs  SavedPosition.hs
message-db/src/MessageDb/Consumer/Subscription/SavedPosition/: Message.hs
message-db/src/MessageDb/Consumer/SubscriptionPosition/: Message.hs  Table.hs
message-db/src/MessageDb/Message/: CreatedAt.hs  GlobalPosition.hs  MessageId.hs  MessageType.hs  Metadata.hs  Payload.hs  StreamName.hs  StreamPosition.hs
message-db/src/MessageDb/Message/StreamName/: Category.hs  Identifier.hs
message-db/src/MessageDb/Produce/: Record.hs  UnexpectedStreamVersion.hs
message-db/src/MessageDb/Producer/: ProduceRecord.hs  UnexpectedStreamVersion.hs
message-db/src/MessageDb/Subscription/: FailedMessage.hs  FailureStrategy.hs
message-db/src/MessageDb/Units/: Microseconds.hs  NumberOfMessages.hs
message-db/test/: Generators.hs  Main.hs  TempMessageDb.hs  TestApp.hs
message-db/test/Examples/: BankAccount.hs
message-db/test/Generators/: StreamName.hs
message-db/test/MessageDb/: FunctionsSpec.hs
message-db/test/MessageDb/Subscription/: FailureStrategySpec.hs  PositionStrategySpec.hs
src/: MessageDb.hs
src/MessageDb/: Entity.hs  Functions.hs  Handlers.hs  Handlers2.hs  Message.hs  ObjectMetadata.hs  Project.hs  Projection.hs  Publish.hs  Read.hs  StreamName.hs  Subscribe.hs  Subscription.hs  TypedMessage.hs  Units.hs  Write.hs
src/MessageDb/Message/: Typed.hs
src/MessageDb/Projection/: FailureStrategy.hs  Handlers.hs
src/MessageDb/Subscription/: FailedMessage.hs  FailureStrategy.hs  Handlers.hs  PositionStrategy.hs
test/: Generators.hs  Main.hs  Properties.hs  Spec.hs  TempMessageDb.hs  TestApp.hs
test/Examples/: BankAccount.hs
test/Generators/: Message.hs  StreamName.hs
test/MessageDb/: FunctionsSpec.hs  MessageSpec.hs  ProjectionSpec.hs  StreamNameSpec.hs  SubscriptionSpec.hs
test/MessageDb/Subscription/: FailureStrategySpec.hs  PositionStrategySpec.hs
