cabal-version: 3.0

name: message-db
version: 0.0.0.1

synopsis: Client library for Message-DB
description: Client library for interacting with Message-DB installed in PostgreSQL

build-type: Simple
category: database, eventsourcing, eventstore
homepage: https://github.com/Disco-Dave/message-db#readme
bug-reports:https://github.com/Disco-Dave/message-db/issues

author: David Burkett
maintainer: David Burkett

copyright: 2022 David Burkett
license: BSD-3-Clause
license-file: LICENSE

common shared
  default-language: Haskell2010

  default-extensions:
    AllowAmbiguousTypes
    DeriveGeneric
    DerivingVia
    FlexibleContexts
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StrictData
    TupleSections
    TypeApplications

  ghc-options:
    -Weverything 
    -Wno-implicit-prelude 
    -Wno-safe 
    -Wno-unsafe 
    -Wno-missing-exported-signatures 
    -Wno-missing-import-lists 
    -Wno-missed-specialisations 
    -Wno-all-missed-specialisations 
    -Wno-missing-local-signatures 
    -Wno-monomorphism-restriction 
    -Wno-missing-deriving-strategies

  if impl(ghc >= 8.10)
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module

  if impl(ghc >= 9.2)
    ghc-options:
      -Wno-missing-kind-signatures

  build-depends:
    , base >=4.7 && <5

library
  import: shared

  hs-source-dirs: src

  exposed-modules:
    MessageDb.Functions
    MessageDb.Handlers
    MessageDb.Message
    MessageDb.Projection
    MessageDb.Projection.Handlers
    MessageDb.StreamName
    MessageDb.Subscription
    MessageDb.Subscription.FailedMessage
    MessageDb.Subscription.FailureStrategy
    MessageDb.Subscription.Handlers
    MessageDb.Subscription.PositionStrategy
    MessageDb.TypedMessage
    MessageDb.Units

  build-depends:
    , aeson >=1.5 && <2.1
    , bytestring >=0.10 && <0.12
    , containers >=0.6 && <0.7
    , postgresql-simple >=0.6 && <0.7
    , safe-exceptions >=0.1 && <0.2
    , text >=1.2 && <2.1
    , time >=1.9 && <1.13
    , uuid >=1.3 && <1.4

test-suite message-db-test
  import: shared

  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test

  other-modules:
      Examples.BankAccount
      Generators
      Generators.Message
      Generators.StreamName
      MessageDb.FunctionsSpec
      MessageDb.StreamNameSpec
      MessageDb.Subscription.FailureStrategySpec
      MessageDb.Subscription.PositionStrategySpec
      MessageDb.SubscriptionSpec
      Properties
      Spec
      TempMessageDb
      TestApp

  ghc-options: 
    -threaded 
    -rtsopts 
    -with-rtsopts=-N

  build-tool-depends:
    , hspec-discover:hspec-discover ==2.*

  build-depends:
    , aeson
    , bytestring
    , containers
    , exceptions >=0.10 && <0.11
    , hedgehog >=1.0 && <1.2
    , hspec >=2.7 && <2.11
    , hspec-hedgehog >=0.0 && <0.1
    , message-db
    , mtl >= 2.2 && <2.4
    , postgres-options >=0.2 && <0.3
    , postgresql-simple
    , resource-pool >=0.2 && <0.3
    , retry >=0.8 && <0.10
    , text
    , time
    , tmp-postgres >=1.34 && <1.35
    , typed-process >=0.2 && <0.3
    , unliftio >=0.2 && <0.3
    , unordered-containers >=0.2 && <0.3
    , uuid
    , vector >=0.12 && <0.13
