cabal-version: 3.0


name: message-db-monad
version: 0.0.1.0


synopsis: Custom monads for message-db
description: See the readme on github for me info: https://github.com/Disco-Dave/message-db-monad#readme


build-type: Simple
category: database, eventsourcing, eventstore, testing
homepage: https://github.com/Disco-Dave/message-db
bug-reports:https://github.com/Disco-Dave/message-db/issues


author: David Burkett
maintainer: David Burkett
copyright: 2022 David Burkett
license: MIT
license-file: LICENSE


source-repository head
  type: git
  location: https://github.com/Disco-Dave/message-db.git


flag pedantic
  default: False
  description: Enables @-Werror@, which turns warnings into errors.
  manual: True


common shared
  default-language: Haskell2010

  default-extensions:
    AllowAmbiguousTypes
    DeriveFunctor
    DeriveGeneric
    DerivingVia
    FlexibleContexts
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StrictData
    TupleSections
    TypeApplications

  ghc-options:
    -Weverything 
    -Wno-all-missed-specialisations 
    -Wno-identities
    -Wno-implicit-prelude 
    -Wno-missed-specialisations 
    -Wno-missing-deriving-strategies
    -Wno-missing-exported-signatures 
    -Wno-missing-import-lists 
    -Wno-missing-local-signatures 
    -Wno-monomorphism-restriction 
    -Wno-safe 
    -Wno-unsafe 

  if impl(ghc >= 8.10)
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module

  if impl(ghc >= 9.2)
    ghc-options:
      -Wno-missing-kind-signatures

  if flag(pedantic)
    ghc-options:
      -Werror

  build-depends:
    , base >=4.7 && <5

  autogen-modules:
    Paths_message_db_monad
    
  other-modules:
    Paths_message_db_monad


library
  import: shared

  hs-source-dirs: src

  build-depends:
    , aeson >=1.5 && <2.2
    , exceptions >=0.10 && <0.11
    , message-db
    , mtl >= 2.2 && <2.4
    , postgresql-simple >=0.6 && <0.7
    , resource-pool >=0.2 && <0.4
    , unliftio >=0.2 && <0.3

  exposed-modules:
    MessageDb.Monad
    MessageDb.Monad.Functions
    MessageDb.Monad.Projection
    MessageDb.Monad.Subscription
