cabal-version: 3.0


name: message-db
version: 0.0.1.0


synopsis: Client library for Message-DB installed in PostgreSQL.
description: See the readme on github for me info: https://github.com/Disco-Dave/message-db/tree/main/message-db#readme


build-type: Simple
category: database, eventsourcing, eventstore
homepage: https://github.com/Disco-Dave/message-db
bug-reports:https://github.com/Disco-Dave/message-db/issues


author: David Burkett
maintainer: David Burkett
copyright: 2022 David Burkett
license: MIT
license-file: LICENSE


extra-source-files:
  README.md
  ChangeLog.md


source-repository head
  type: git
  location: https://github.com/Disco-Dave/message-db.git


flag pedantic
  default: False
  description: Enables @-Werror@, which turns warnings into errors.
  manual: True


common shared
  default-language: Haskell2010

  default-extensions:
    AllowAmbiguousTypes
    DeriveFunctor
    DeriveGeneric
    DerivingVia
    FlexibleContexts
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StrictData
    TypeApplications

  ghc-options:
    -Weverything 
    -Wno-all-missed-specialisations 
    -Wno-identities
    -Wno-implicit-prelude 
    -Wno-missed-specialisations 
    -Wno-missing-deriving-strategies
    -Wno-missing-exported-signatures 
    -Wno-missing-import-lists 
    -Wno-missing-local-signatures 
    -Wno-monomorphism-restriction 
    -Wno-safe 
    -Wno-unsafe 
    -Werror=incomplete-patterns

  if impl(ghc >= 8.10)
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module

  if impl(ghc >= 9.2)
    ghc-options:
      -Wno-missing-kind-signatures

  if flag(pedantic)
    ghc-options:
      -Werror

  build-depends:
    , base >=4.7 && <5


common shared-exe
  import: shared

  ghc-options: 
    -threaded 
    -rtsopts 
    -with-rtsopts=-N

  build-depends:
    , message-db


library
  import: shared

  hs-source-dirs: src

  build-depends:
    , aeson >=1.5 && <2.2
    , bytestring >=0.10 && <0.12
    , containers >=0.6 && <0.7
    , mtl >= 2.2 && <2.4
    , postgresql-simple >=0.6 && <0.7
    , safe-exceptions >=0.1 && <0.2
    , text >=1.2 && <2.1
    , time >=1.9 && <1.13
    , transformers >=0.4 && <0.7
    , uuid >=1.3 && <1.4

  exposed-modules:
    MessageDb
    MessageDb.Consumer
    MessageDb.Consumer.BatchSize
    MessageDb.Consumer.Condition
    MessageDb.Consumer.ConsumerGroup
    MessageDb.Consumer.ConsumerGroupSize
    MessageDb.Consumer.ConsumerIndex
    MessageDb.Correlation
    MessageDb.Message
    MessageDb.Message.CreatedAt
    MessageDb.Message.GlobalPosition
    MessageDb.Message.MessageId
    MessageDb.Message.MessageType
    MessageDb.Message.Metadata
    MessageDb.Message.Payload
    MessageDb.Message.StreamName
    MessageDb.Message.StreamName.Category
    MessageDb.Message.StreamName.Identifier
    MessageDb.Message.StreamPosition
    MessageDb.Producer
    MessageDb.Producer.UnexpectedStreamVersion
    MessageDb.StreamVersion
    MessageDb.Units.Microseconds
    MessageDb.Units.NumberOfMessages


test-suite message-db-test
  import: shared-exe

  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test

  build-tool-depends:
    , hspec-discover:hspec-discover ==2.*

  build-depends:
    , aeson
    , containers
    , hedgehog >=1.0 && <1.3
    , hspec >=2.7 && <2.11
    , hspec-hedgehog >=0.0 && <0.1
    , message-db-temp
    , mtl
    , postgresql-simple
    , resource-pool >=0.2 && <0.4
    , text
    , time
    , unliftio >=0.2 && <0.3
    , unordered-containers >=0.2 && <0.3
    , uuid
    , vector >=0.12 && <0.14

  other-modules:
    Spec
