cabal-version: 3.4


name: bank-shared
version: 0.1.0.0
synopsis: Types shared between two or more programs


flag pedantic
  default: False
  description: Enables @-Werror@, which turns warnings into errors.
  manual: True


common shared
  default-language: GHC2021

  default-extensions:
    AllowAmbiguousTypes
    DataKinds
    DerivingVia
    DuplicateRecordFields
    LambdaCase
    NoFieldSelectors
    OverloadedRecordDot
    OverloadedStrings
    QuasiQuotes
    RecordWildCards
    StrictData
    TypeFamilies
    TypeOperators

  ghc-options:
    -Weverything 
    -Wno-all-missed-specialisations 
    -Wno-identities
    -Wno-implicit-prelude 
    -Wno-missed-specialisations 
    -Wno-missing-deriving-strategies
    -Wno-missing-exported-signatures 
    -Wno-missing-import-lists 
    -Wno-missing-local-signatures 
    -Wno-monomorphism-restriction 
    -Wno-safe 
    -Wno-unsafe 
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-missing-kind-signatures
    -Werror=incomplete-patterns

  if flag(pedantic)
    ghc-options:
      -Werror

  build-depends:
    , base >=4.7 && <5

  autogen-modules:
    Paths_bank_shared
    
  other-modules:
    Paths_bank_shared


common shared-exe
  import:
    , shared

  build-depends:
    , bank-shared

  ghc-options:
    -threaded 
    -rtsopts 
    -with-rtsopts=-N


library
  import: shared

  hs-source-dirs: src

  build-depends:
    , annotated-exception >= 0.2.0.4 && < 0.3
    , bytestring >= 0.11.3 && < 0.12
    , clock >= 0.8.3 && < 0.9
    , data-has >= 0.4.0.0 && < 0.5
    , envparse >= 0.5.0 && < 0.6
    , katip >= 0.8.7 && < 0.9
    , mtl >= 2.2.2 && < 2.3
    , postgresql-simple >= 0.6.4 && < 0.7
    , resource-pool >= 0.3.1 && < 0.4
    , text >= 1.2.5 && < 2.1
    , unliftio >= 0.2.22 && < 0.3
    , uuid >= 1.3.15 && < 1.4

  exposed-modules:
    Bank.Shared.Database
    Bank.Shared.Database.ConnectionUrl
    Bank.Shared.Database.IdleConnectionTimeout
    Bank.Shared.Database.MaxConnections
    Bank.Shared.EnvParsers
    Bank.Shared.Exception
    Bank.Shared.Exception.Annotations
    Bank.Shared.Logging


test-suite bank-shared-test
  import: shared-exe

  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs

  build-tool-depends:
    , hspec-discover:hspec-discover

  build-depends:
    , annotated-exception
    , bytestring
    , envparse
    , hspec >= 2.10.0.1 && < 2.11
    , mtl
    , postgresql-simple
    , QuickCheck >= 2.14.2 && < 2.15
    , text
    , tmp-postgres >= 1.34.1.0 && < 1.35
    , unliftio

  other-modules:
    Bank.Shared.Database.ConnectionUrlSpec
    Bank.Shared.Database.IdleConnectionTimeoutSpec
    Bank.Shared.Database.MaxConnectionsSpec
    Bank.Shared.DatabaseSpec
    Bank.Shared.EnvParsersSpec
    Bank.Shared.Exception.AnnotationsSpec
    Spec
    Spec.PostgresTemp
    Spec.Utils
